syntax = "proto3";
package dbtesterpb;

import "github.com/gogo/protobuf/gogoproto/gogo.proto";

option (gogoproto.marshaler_all) = true;
option (gogoproto.sizer_all) = true;
option (gogoproto.unmarshaler_all) = true;
option (gogoproto.goproto_getters_all) = false;

// DatabaseID differentiates between major or minor releases (possibly different APIs)
// of each database. Make sure to make accordingn changes in 'flag_*' whenever an ID
// is added/removed.
enum DatabaseID {
  etcd__tip  = 0;
  etcd__v3_2 = 1;
  etcd__v3_3 = 2;

  zookeeper__r3_4_9 = 100;
  zookeeper__r3_5_2_alpha = 101;
  zookeeper__r3_5_3_beta = 102;

  consul__v0_8_4 = 200;

  zetcd__beta = 300;
  cetcd__beta = 400;
}
